test/Runner/errors/tests/Scope3.runner.js
scope("test", () => {
	throw new Error();
})